# seatuna

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  bench_chacha20.c
include/: byteswap.h  seatuna.h  seatuna_blake2.h  seatuna_chacha20.h  seatuna_endian.h  static_utils.h
src/: CMakeLists.txt  portable_chacha20.h  portable_sha256.h  seatuna.c  seatuna_blake2.c  seatuna_chacha20.c  seatuna_chacha20_featuretest.c  seatuna_chacha20_linux_amd64_sse.s  static_utils.h
src/platform/linux/: byteswap.h
src/platform/win32/: byteswap.h
test/: CMakeLists.txt  blake2_test.c  chacha20_test.c  test_avx.c  testmain.c
test/blake2_test/: CMakeLists.txt  blake2_test.c
test/chacha20_test/: CMakeLists.txt  chacha20_test.c
test/sha_test/: CMakeLists.txt
test/sha_tests/: CMakeLists.txt  sha_tests.c
